**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-13

* Faster code used in 'uniquecombs'. Speeds up discretization step in 
  'bam(...,discrete=TRUE)'. Could still be improved for multi-column case.

* fix in predict.gam handling of 'na.action' to avoid trying to get type of
  na.action from name of na.action function - this was fragile to nesting
  and could cause predict.bam to fail in the presence of NA's.

* fix of gam.outer so that general families (e.g. cox.ph) can have all
  their smoothing parameters supplied without then ignoring the penalties!

* Fix of bug in zlim handling in vis.gam perspective plot with standard 
  errors. Thanks Petra Kuhnert. 

* probit link added to 'jagam' (suggested by Kenneth Knoblauch).

* 'Sl.' routines revised to allow operation with non-linearly parameterized
  smoothers. 	

* bug fix in Hessian computation in gam.fit5 - leading diagonal of Hessian of 
  log|Hp| could be wrong where Hp is penalized Hessian. 

1.8-12

** "bs" B-spline smoothing basis. B-splines with derivative based penalties
  of various orders.

* 'gamm' now uses a fixed scale parameter in PQL estimation for Poisson and 
  binomial data via the `sigma' option in lmeControl.

* bam null deviance computation was wrong with prior weights (including 
  binomial other than binary case), and returned deviance was wrong for 
  non-binary binomial. Fixed (did not affect estimation). 

* improvements to "bfgs" optimizer to better deal with `infinite' smoothing
  parameters.

* changed scheme=3 in default 2-D plotting to grey scale version of 
  scheme=2.

* 'trichol' and 'bandchol' added for banded Cholesky decompositions, plus
  'sdiag' functions added for extracting and setting matrix sub- and
  super-  diagonals.
